src/snapshots/openapi_to_rust__test_helpers__inline_variant_naming.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum MessageContent {
    MessageContentString(MessageContentString),
    ContentBlockArray(ContentBlockArray),
}
///Plain text content
pub type MessageContentString = String;
///Array variant in union
pub type ContentBlockArray = Vec<ContentBlock>;
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ContentBlock {
    pub text: String,
    pub r#type: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum ConfigValue {
    ConfigValueString(ConfigValueString),
    ConfigValueIntegerVariant1(ConfigValueIntegerVariant1),
    ConfigValueBooleanVariant2(ConfigValueBooleanVariant2),
    ConfigValueNumberVariant3(ConfigValueNumberVariant3),
}
pub type ConfigValueString = String;
pub type ConfigValueNumberVariant3 = f64;
pub type ConfigValueIntegerVariant1 = i64;
pub type ConfigValueBooleanVariant2 = bool;
