src/snapshots/openapi_to_rust__test_helpers__nested_allof_oneof.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateResponse {
    ///Text, image, or file inputs to the model
    pub input: CreateResponseInput,
    pub model: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub temperature: Option<f64>,
}
///Text, image, or file inputs to the model
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum CreateResponseInput {
    String(String),
    InputArray(Vec<InputItem>),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseProperties {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub temperature: Option<f64>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct InputItem {
    pub content: String,
    pub r#type: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateModelResponseProperties {
    pub model: String,
}
